# INFO-2602-Labs

info2602-fastapi-l1-main/: README.md  main.py  pyproject.toml
info2602-fastapi-l3-main/app/: cli.py  models.py
info2602-fastapi-l4-main/app/: main.py  models.py
info2602-fastapi-l4-main/app/routers/: auth.py  category.py  todo.py
info2602-fastapi-l5-main/: pyproject.toml
info2602-fastapi-l5-main/app/: cli.py
info2602-fastapi-l5-main/app/routers/: auth.py
info2602-fastapi-l5-main/app/templates/: login.html  signup.html  todo.html
info2602-fastapi-l6-main/: pyproject.toml
info2602-fastapi-l6-main/app/: cli.py
info2602-fastapi-l6-main/app/routers/: __init__.py  admin.py
info2602-fastapi-l6-main/app/templates/: admin.html
info2602-l8-main/: app.html  app.js  index.html  login.js  signup.html  util.js
