[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "info-2602-fastapi-lab-1"
version = "0.0.1"
description = "Lab 1 for info 2602"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kwasi Edwards", email = "kwasiedwards@gmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
]
[project.optional-dependencies]
dev = [
    "fastapi[standard]",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
